// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewFilterForm match snapshots Default view filter component 1`] = `
<div
  class="filters__content"
>
  <div
    class="filters__none filters__none--scrollable"
  >
    <div
      class="filters__none-title"
    >
      
      viewFilterContext.noFilterTitle
    
    </div>
     
    <div
      class="filters__none-description"
    >
      
      viewFilterContext.noFilterText
    
    </div>
  </div>
   
  <!---->
   
  <div
    class="context__footer"
  >
    <button
      class="button-text"
    >
      <i
        class="button-text__icon iconoir-plus"
      />
       
      <!---->
       
      <span
        class="button-text__label"
      >
        
      viewFilterContext.addFilter
      </span>
    </button>
     
    <button
      class="button-text"
    >
      <i
        class="button-text__icon iconoir-plus"
      />
       
      <!---->
       
      <span
        class="button-text__label"
      >
        
      viewFilterContext.addFilterGroup
      </span>
    </button>
     
    <!---->
  </div>
</div>
`;

exports[`ViewFilterForm match snapshots Full view filter component 1`] = `
<div
  class="filters__content"
>
  <!---->
   
  <div
    class="filters__items filters__items--with-padding filters__items--scrollable"
  >
    <div
      class="filters__item-wrapper"
    >
      <div
        class="filters__item filters__item--level-1"
      >
        <div
          class="filters__operator"
        >
          <span
            class="filters__operator-where"
          >
            viewFilterContext.where
          </span>
           
          <!---->
           
          <!---->
        </div>
         
        <div
          class="filters__condition-item"
        >
          <div
            class="filters__field"
          >
            <div
              class="dropdown"
              tabindex="0"
            >
              <a
                class="dropdown__selected"
              >
                <!---->
                 
                <!---->
                 
                <span
                  class="dropdown__selected-text"
                  title="Name"
                >
                  Name
                </span>
                 
                <i
                  class="dropdown__toggle-icon iconoir-nav-arrow-down"
                />
              </a>
               
              <div
                class="dropdown__items hidden dropdown__items--fixed"
              >
                <div
                  class="select__search"
                >
                  <i
                    class="select__search-icon iconoir-search"
                  />
                   
                  <input
                    class="select__search-input"
                    placeholder="action.search"
                    tabindex="0"
                    type="text"
                  />
                </div>
                 
                <ul
                  class="select__items select__items--no-max-height"
                  style=""
                  tabindex="-1"
                >
                  <li
                    class="select__item select__item--no-options active"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="Name"
                        >
                          Name
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="Stars"
                        >
                          Stars
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="Flag"
                        >
                          Flag
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                </ul>
                 
                <!---->
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="filters__type"
          >
            <div
              class="dropdown"
              tabindex="0"
            >
              <a
                class="dropdown__selected"
              >
                <!---->
                 
                <!---->
                 
                <span
                  class="dropdown__selected-text"
                  title="viewFilter.is"
                >
                  viewFilter.is
                </span>
                 
                <i
                  class="dropdown__toggle-icon iconoir-nav-arrow-down"
                />
              </a>
               
              <div
                class="dropdown__items hidden dropdown__items--fixed"
              >
                <div
                  class="select__search"
                >
                  <i
                    class="select__search-icon iconoir-search"
                  />
                   
                  <input
                    class="select__search-input"
                    placeholder="action.search"
                    tabindex="0"
                    type="text"
                  />
                </div>
                 
                <ul
                  class="select__items select__items--no-max-height"
                  style=""
                  tabindex="-1"
                >
                  <li
                    class="select__item select__item--no-options active"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.is"
                        >
                          viewFilter.is
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.isNot"
                        >
                          viewFilter.isNot
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.contains"
                        >
                          viewFilter.contains
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.containsNot"
                        >
                          viewFilter.containsNot
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.containsWord"
                        >
                          viewFilter.containsWord
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.doesntContainWord"
                        >
                          viewFilter.doesntContainWord
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.lengthIsLowerThan"
                        >
                          viewFilter.lengthIsLowerThan
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.isEmpty"
                        >
                          viewFilter.isEmpty
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.isNotEmpty"
                        >
                          viewFilter.isNotEmpty
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                </ul>
                 
                <!---->
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="filters__value filters__value--with-input-field"
          >
            <div
              class="form-input"
            >
              <!---->
               
              <div
                class="form-input__wrapper"
              >
                <input
                  autocomplete=""
                  class="form-input__input"
                  type="text"
                />
                 
                <!---->
              </div>
               
              <!---->
            </div>
              
            <!---->
             
            <!---->
          </div>
           
          <a
            class="filters__remove"
          >
            <i
              class="iconoir-bin"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      class="filters__item-wrapper"
    >
      <div
        class="filters__item filters__item--level-1"
      >
        <div
          class="filters__operator"
        >
          <!---->
           
          <div
            class="dropdown"
            tabindex="0"
          >
            <a
              class="dropdown__selected"
            >
              <!---->
               
              <!---->
               
              <span
                class="dropdown__selected-text"
                title="viewFilterContext.and"
              >
                viewFilterContext.and
              </span>
               
              <i
                class="dropdown__toggle-icon iconoir-nav-arrow-down"
              />
            </a>
             
            <div
              class="dropdown__items hidden dropdown__items--fixed"
            >
              <!---->
               
              <ul
                class="select__items select__items--no-max-height"
                style=""
                tabindex="-1"
              >
                <li
                  class="select__item select__item--no-options active"
                >
                  <a
                    class="select__item-link"
                  >
                    <div
                      class="select__item-name"
                    >
                      <!---->
                       
                      <!---->
                       
                      <!---->
                       
                      <span
                        class="select__item-name-text"
                        title="viewFilterContext.and"
                      >
                        viewFilterContext.and
                      </span>
                    </div>
                     
                    <!---->
                  </a>
                   
                  <i
                    class="select__item-active-icon iconoir-check"
                  />
                </li>
                 
                <li
                  class="select__item select__item--no-options"
                >
                  <a
                    class="select__item-link"
                  >
                    <div
                      class="select__item-name"
                    >
                      <!---->
                       
                      <!---->
                       
                      <!---->
                       
                      <span
                        class="select__item-name-text"
                        title="viewFilterContext.or"
                      >
                        viewFilterContext.or
                      </span>
                    </div>
                     
                    <!---->
                  </a>
                   
                  <i
                    class="select__item-active-icon iconoir-check"
                  />
                </li>
              </ul>
               
              <!---->
               
              <!---->
            </div>
          </div>
           
          <!---->
        </div>
         
        <div
          class="filters__condition-item"
        >
          <div
            class="filters__field"
          >
            <div
              class="dropdown"
              tabindex="0"
            >
              <a
                class="dropdown__selected"
              >
                <!---->
                 
                <!---->
                 
                <span
                  class="dropdown__selected-text"
                  title="Stars"
                >
                  Stars
                </span>
                 
                <i
                  class="dropdown__toggle-icon iconoir-nav-arrow-down"
                />
              </a>
               
              <div
                class="dropdown__items hidden dropdown__items--fixed"
              >
                <div
                  class="select__search"
                >
                  <i
                    class="select__search-icon iconoir-search"
                  />
                   
                  <input
                    class="select__search-input"
                    placeholder="action.search"
                    tabindex="0"
                    type="text"
                  />
                </div>
                 
                <ul
                  class="select__items select__items--no-max-height"
                  style=""
                  tabindex="-1"
                >
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="Name"
                        >
                          Name
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options active"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="Stars"
                        >
                          Stars
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="Flag"
                        >
                          Flag
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                </ul>
                 
                <!---->
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="filters__type"
          >
            <div
              class="dropdown"
              tabindex="0"
            >
              <a
                class="dropdown__selected"
              >
                <!---->
                 
                <!---->
                 
                <span
                  class="dropdown__selected-text"
                  title="viewFilter.is"
                >
                  viewFilter.is
                </span>
                 
                <i
                  class="dropdown__toggle-icon iconoir-nav-arrow-down"
                />
              </a>
               
              <div
                class="dropdown__items hidden dropdown__items--fixed"
              >
                <div
                  class="select__search"
                >
                  <i
                    class="select__search-icon iconoir-search"
                  />
                   
                  <input
                    class="select__search-input"
                    placeholder="action.search"
                    tabindex="0"
                    type="text"
                  />
                </div>
                 
                <ul
                  class="select__items select__items--no-max-height"
                  style=""
                  tabindex="-1"
                >
                  <li
                    class="select__item select__item--no-options active"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.is"
                        >
                          viewFilter.is
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.isNot"
                        >
                          viewFilter.isNot
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.higherThan"
                        >
                          viewFilter.higherThan
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.higherThanOrEqual"
                        >
                          viewFilter.higherThanOrEqual
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.lowerThan"
                        >
                          viewFilter.lowerThan
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.lowerThanOrEqual"
                        >
                          viewFilter.lowerThanOrEqual
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                </ul>
                 
                <!---->
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="filters__value filters__value--with-input-field"
          >
            <div
              class="filters__value-rating"
            >
              <div
                class="rating color--dark-orange editing"
              >
                <i
                  class="rating__star baserow-icon-star rating__star--selected"
                />
                <i
                  class="rating__star baserow-icon-star rating__star--selected"
                />
                <i
                  class="rating__star baserow-icon-star"
                />
                <i
                  class="rating__star baserow-icon-star"
                />
                <i
                  class="rating__star baserow-icon-star"
                />
              </div>
            </div>
              
            <!---->
             
            <!---->
          </div>
           
          <a
            class="filters__remove"
          >
            <i
              class="iconoir-bin"
            />
          </a>
        </div>
      </div>
    </div>
     
  </div>
   
  <div
    class="context__footer"
  >
    <button
      class="button-text"
    >
      <i
        class="button-text__icon iconoir-plus"
      />
       
      <!---->
       
      <span
        class="button-text__label"
      >
        
      viewFilterContext.addFilter
      </span>
    </button>
     
    <button
      class="button-text"
    >
      <i
        class="button-text__icon iconoir-plus"
      />
       
      <!---->
       
      <span
        class="button-text__label"
      >
        
      viewFilterContext.addFilterGroup
      </span>
    </button>
     
    <div
      class="margin-left-auto"
    >
      <div
        class="switch switch--small switch--color-green"
      >
        <div
          class="switch__label"
        >
          viewFilterContext.disableAllFilters
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewFilterForm match snapshots Test rating filter 1`] = `
<div
  class="filters__content"
>
  <!---->
   
  <div
    class="filters__items filters__items--with-padding filters__items--scrollable"
  >
    <div
      class="filters__item-wrapper"
    >
      <div
        class="filters__item filters__item--level-1"
      >
        <div
          class="filters__operator"
        >
          <span
            class="filters__operator-where"
          >
            viewFilterContext.where
          </span>
           
          <!---->
           
          <!---->
        </div>
         
        <div
          class="filters__condition-item"
        >
          <div
            class="filters__field"
          >
            <div
              class="dropdown"
              tabindex="0"
            >
              <a
                class="dropdown__selected"
              >
                <!---->
                 
                <!---->
                 
                <span
                  class="dropdown__selected-text"
                  title="Stars"
                >
                  Stars
                </span>
                 
                <i
                  class="dropdown__toggle-icon iconoir-nav-arrow-down"
                />
              </a>
               
              <div
                class="dropdown__items hidden dropdown__items--fixed"
              >
                <div
                  class="select__search"
                >
                  <i
                    class="select__search-icon iconoir-search"
                  />
                   
                  <input
                    class="select__search-input"
                    placeholder="action.search"
                    tabindex="0"
                    type="text"
                  />
                </div>
                 
                <ul
                  class="select__items select__items--no-max-height"
                  style=""
                  tabindex="-1"
                >
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="Name"
                        >
                          Name
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options active"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="Stars"
                        >
                          Stars
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="Flag"
                        >
                          Flag
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                </ul>
                 
                <!---->
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="filters__type"
          >
            <div
              class="dropdown"
              tabindex=""
            >
              <a
                class="dropdown__selected"
              >
                <!---->
                 
                <!---->
                 
                <span
                  class="dropdown__selected-text"
                  title="viewFilter.is"
                >
                  viewFilter.is
                </span>
                 
                <i
                  class="dropdown__toggle-icon iconoir-nav-arrow-down"
                />
              </a>
               
              <div
                class="dropdown__items dropdown__items--fixed"
                style="left: 0px; min-width: 0px; top: 0px; max-height: calc(100vh - 20px);"
              >
                <div
                  class="select__search"
                >
                  <i
                    class="select__search-icon iconoir-search"
                  />
                   
                  <input
                    class="select__search-input"
                    placeholder="action.search"
                    tabindex="0"
                    type="text"
                  />
                </div>
                 
                <ul
                  class="select__items select__items--no-max-height prevent-scroll"
                  style=""
                  tabindex="-1"
                >
                  <li
                    class="select__item select__item--no-options active hover"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.is"
                        >
                          viewFilter.is
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.isNot"
                        >
                          viewFilter.isNot
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.higherThan"
                        >
                          viewFilter.higherThan
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.higherThanOrEqual"
                        >
                          viewFilter.higherThanOrEqual
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.lowerThan"
                        >
                          viewFilter.lowerThan
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.lowerThanOrEqual"
                        >
                          viewFilter.lowerThanOrEqual
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                </ul>
                 
                <!---->
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="filters__value filters__value--with-input-field"
          >
            <div
              class="filters__value-rating"
            >
              <div
                class="rating color--dark-orange editing"
              >
                <i
                  class="rating__star baserow-icon-star rating__star--selected"
                />
                <i
                  class="rating__star baserow-icon-star rating__star--selected"
                />
                <i
                  class="rating__star baserow-icon-star"
                />
                <i
                  class="rating__star baserow-icon-star"
                />
                <i
                  class="rating__star baserow-icon-star"
                />
              </div>
            </div>
              
            <!---->
             
            <!---->
          </div>
           
          <a
            class="filters__remove"
          >
            <i
              class="iconoir-bin"
            />
          </a>
        </div>
      </div>
    </div>
     
  </div>
   
  <div
    class="context__footer"
  >
    <button
      class="button-text"
    >
      <i
        class="button-text__icon iconoir-plus"
      />
       
      <!---->
       
      <span
        class="button-text__label"
      >
        
      viewFilterContext.addFilter
      </span>
    </button>
     
    <button
      class="button-text"
    >
      <i
        class="button-text__icon iconoir-plus"
      />
       
      <!---->
       
      <span
        class="button-text__label"
      >
        
      viewFilterContext.addFilterGroup
      </span>
    </button>
     
    <div
      class="margin-left-auto"
    >
      <div
        class="switch switch--small switch--color-green"
      >
        <div
          class="switch__label"
        >
          viewFilterContext.disableAllFilters
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewFilterForm match snapshots Test rating filter 2`] = `
<div
  class="filters__content"
>
  <!---->
   
  <div
    class="filters__items filters__items--with-padding filters__items--scrollable"
  >
    <div
      class="filters__item-wrapper"
    >
      <div
        class="filters__item filters__item--level-1"
      >
        <div
          class="filters__operator"
        >
          <span
            class="filters__operator-where"
          >
            viewFilterContext.where
          </span>
           
          <!---->
           
          <!---->
        </div>
         
        <div
          class="filters__condition-item"
        >
          <div
            class="filters__field"
          >
            <div
              class="dropdown"
              tabindex="0"
            >
              <a
                class="dropdown__selected"
              >
                <!---->
                 
                <!---->
                 
                <span
                  class="dropdown__selected-text"
                  title="Stars"
                >
                  Stars
                </span>
                 
                <i
                  class="dropdown__toggle-icon iconoir-nav-arrow-down"
                />
              </a>
               
              <div
                class="dropdown__items hidden dropdown__items--fixed"
              >
                <div
                  class="select__search"
                >
                  <i
                    class="select__search-icon iconoir-search"
                  />
                   
                  <input
                    class="select__search-input"
                    placeholder="action.search"
                    tabindex="0"
                    type="text"
                  />
                </div>
                 
                <ul
                  class="select__items select__items--no-max-height"
                  style=""
                  tabindex="-1"
                >
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="Name"
                        >
                          Name
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options active"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="Stars"
                        >
                          Stars
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="Flag"
                        >
                          Flag
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                </ul>
                 
                <!---->
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="filters__type"
          >
            <div
              class="dropdown"
              tabindex="0"
            >
              <a
                class="dropdown__selected"
              >
                <!---->
                 
                <!---->
                 
                <span
                  class="dropdown__selected-text"
                  title="viewFilter.is"
                >
                  viewFilter.is
                </span>
                 
                <i
                  class="dropdown__toggle-icon iconoir-nav-arrow-down"
                />
              </a>
               
              <div
                class="dropdown__items hidden dropdown__items--fixed"
                style="left: 0px; min-width: 0px; top: 0px; max-height: calc(100vh - 20px);"
              >
                <div
                  class="select__search"
                >
                  <i
                    class="select__search-icon iconoir-search"
                  />
                   
                  <input
                    class="select__search-input"
                    placeholder="action.search"
                    tabindex="0"
                    type="text"
                  />
                </div>
                 
                <ul
                  class="select__items select__items--no-max-height prevent-scroll"
                  style=""
                  tabindex="-1"
                >
                  <li
                    class="select__item select__item--no-options active hover"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.is"
                        >
                          viewFilter.is
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.isNot"
                        >
                          viewFilter.isNot
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.higherThan"
                        >
                          viewFilter.higherThan
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.higherThanOrEqual"
                        >
                          viewFilter.higherThanOrEqual
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.lowerThan"
                        >
                          viewFilter.lowerThan
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                  <li
                    class="select__item select__item--no-options"
                  >
                    <a
                      class="select__item-link"
                    >
                      <div
                        class="select__item-name"
                      >
                        <!---->
                         
                        <!---->
                         
                        <!---->
                         
                        <span
                          class="select__item-name-text"
                          title="viewFilter.lowerThanOrEqual"
                        >
                          viewFilter.lowerThanOrEqual
                        </span>
                      </div>
                       
                      <!---->
                    </a>
                     
                    <i
                      class="select__item-active-icon iconoir-check"
                    />
                  </li>
                </ul>
                 
                <!---->
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="filters__value filters__value--with-input-field"
          >
            <div
              class="filters__value-rating"
            >
              <div
                class="rating color--dark-orange editing"
              >
                <i
                  class="rating__star baserow-icon-star rating__star--selected"
                />
                <i
                  class="rating__star baserow-icon-star rating__star--selected"
                />
                <i
                  class="rating__star baserow-icon-star rating__star--selected"
                />
                <i
                  class="rating__star baserow-icon-star rating__star--selected"
                />
                <i
                  class="rating__star baserow-icon-star rating__star--selected"
                />
              </div>
            </div>
              
            <!---->
             
            <!---->
          </div>
           
          <a
            class="filters__remove"
          >
            <i
              class="iconoir-bin"
            />
          </a>
        </div>
      </div>
    </div>
     
  </div>
   
  <div
    class="context__footer"
  >
    <button
      class="button-text"
    >
      <i
        class="button-text__icon iconoir-plus"
      />
       
      <!---->
       
      <span
        class="button-text__label"
      >
        
      viewFilterContext.addFilter
      </span>
    </button>
     
    <button
      class="button-text"
    >
      <i
        class="button-text__icon iconoir-plus"
      />
       
      <!---->
       
      <span
        class="button-text__label"
      >
        
      viewFilterContext.addFilterGroup
      </span>
    </button>
     
    <div
      class="margin-left-auto"
    >
      <div
        class="switch switch--small switch--color-green"
      >
        <div
          class="switch__label"
        >
          viewFilterContext.disableAllFilters
        </div>
      </div>
    </div>
  </div>
</div>
`;
